# Latent-Anti-Microbial-Peptides-LAMP

./: .env-default  .gitignore  AGENTS.md  LICENSE  README.md  Taskfile.yml  hydramp_training_colab.ipynb  pyproject.toml
setup/: pyproject.toml
setup/prepare_data/: README.md  __init__.py  __main__.py  create_huggingface_dataset_repo.py  physicochemical_core.py  prepare_and_upload_apex_predictions.py  prepare_and_upload_dbaasp.py  prepare_and_upload_dbamp.py  prepare_and_upload_esm2_uniref.py  prepare_and_upload_physicochemical_properties.py  prepare_and_upload_strain_conditions.py  prepare_uniref.py  upload_data_to_huggingface.py  utils.py
setup/prepare_data/configs/: create_huggingface_dataset_repo_config.yaml  prepare_and_upload_esm2_uniref_config.yaml  prepare_and_upload_physicochemical_properties_config.yaml
setup/prepare_data/configs/apex_predictions/: prepare_and_upload_apex_predictions_config.yaml  prepare_and_upload_apex_predictions_dbaasp_config.yaml  prepare_and_upload_apex_predictions_dbamp_config.yaml
setup/prepare_data/configs/dbaasp/: prepare_and_upload_dbaasp_config.yaml
setup/prepare_data/configs/dbamp/: prepare_and_upload_dbamp_config.yaml
setup/prepare_data/configs/esm2_uniref/: prepare_and_upload_esm2_uniref_config.yaml
setup/prepare_data/configs/physicochemical_properties/: prepare_and_upload_physicochemical_properties_config.yaml  prepare_and_upload_physicochemical_properties_train_config.yaml  prepare_and_upload_physicochemical_properties_validation_config.yaml
setup/prepare_data/configs/strain_conditions/: prepare_and_upload_strain_conditions_config.yaml
setup/prepare_tokenizer/: HUB_README.md  README.md  __init__.py  __main__.py  build_tokenizer.py  upload_tokenizer.py  vocab.py
setup/prepare_tokenizer/configs/: build_and_upload_config.yaml
src/amp_opt/: README.md  pyproject.toml
src/amp_opt/src/amp_opt/: __init__.py  __main__.py  black_box.py  brownian_hydramp_init.py  brownian_solver.py  config.py  encoding.py  evosax_runner.py  fitness.py  latent_sampling_hydramp_init.py  latent_sampling_solver.py  mutang_hydramp_init.py  mutang_solver.py  oracle.py  random_mutation_solver.py  run.py  sampling.py  sequence_constants.py  solver_factories.py  step_by_step_solver.py  strain_map.py
src/amp_opt/tests/: test_archive.py  test_random_search_method.py  test_runner.py  test_sampling.py  test_strain_map_and_oracle.py
src/apex/: .gitignore  README.md  pyproject.toml
src/apex/src/apex/: AMP_DL_model_twohead.py  APEX_models.py  APEX_predictor.py  __init__.py
src/blosum_matrix/: README.md  pyproject.toml
src/blosum_matrix/src/lamp_blosum_matrix/: __init__.py  alphabet.py  blocks.py  cli.py  cluster_cdhit.py  cluster_exact.py  counts.py  log_odds.py  ncbi.py
src/blosum_matrix/tests/: test_blocks.py  test_cdhit_integration.py  test_cluster_exact.py  test_counts.py  test_log_odds.py  test_ncbi.py
src/hydramp/: .gitignore  README.md  pyproject.toml
src/hydramp/configs/: hydramp_model_hub.yaml  hydramp_tokenizer_hub.yaml
src/hydramp/src/hydramp/: __init__.py  citation.py  config.py  export_to_hf.py  export_tokenizer_to_hf.py  hydramp.py  model.py  publish_from_config.py  tokenizer.py  verify_hf_parity.py
src/modelling/: README.md  __init__.py  __main__.py  pyproject.toml
src/modelling/.neptune/: config.yaml
src/modelling/configs/: README.md  config.yaml  grugru_vae.yaml  grugru_vae_streaming.yaml
src/modelling/configs/callbacks/: checkpoint.yaml
src/modelling/configs/data/: 00.yaml  grugru_vae.yaml  grugru_vae_streaming.yaml
src/modelling/configs/logger/: grugru.yaml  grugru_vae.yaml  mlflow_local.yaml
src/modelling/configs/model/: grugru_vae.yaml  grugru_vae_kl01.yaml
src/modelling/configs/trainer/: grugru_vae.yaml  grugru_vae_streaming.yaml
src/modelling/configs/training/: grugru_vae.yaml  grugru_vae_streaming.yaml
src/modelling/core/: __init__.py
src/modelling/datamodules/: __init__.py  seq_dm.py
src/modelling/models/: utils.py
src/modelling/models/aes/: base.py
src/modelling/models/utils/: import.py  lightning.py  utils.py
src/modelling/src/: __main__.py
src/modelling/src/callbacks/: README.md  __init__.py  hf_iterable_set_epoch.py  iterable_epoch.py  logging.py  loss_weight_warmup.py  manifest.py  metrics.py  training_manifest.py
src/modelling/src/compute_numbers/: fns.py
src/modelling/src/datamodules/: README.md  __init__.py  collate.py  seq_dm.py
src/modelling/src/metamodule/: README.md  __init__.py  loss_manager.py  losses.py  metamodule.py
src/modelling/src/models/: README.md
src/modelling/src/training/: __init__.py  __main__.py  build.py  data.py  hydra_overrides.py  metrics.py  trainer.py
src/modelling/src/utils/: README.md  argument_mapping.py  export_to_hf.py  importing.py  mlflow_utils.py  neptune.py
src/modelling/utils/: neptune.py
src/pep_compass_jr/: __init__.py  __main__.py  pyproject.toml  tangent_space_mutation_proposer.py  utils.py
src/pep_compass_jr/encoder_decoder/: encoder_decoder.py  hydramp_encoder_decoder.py
src/pep_eval/: README.md  pyproject.toml
src/pep_eval/src/pep_eval/: __init__.py  api.py  io.py  logging.py  metrics.py  panels.py  parsing.py
src/pep_eval/tests/: test_metrics.py
src/pipelines/: README.md  _pipeline_utils.py  publish_hf.py  pyproject.toml  train_and_publish.py  training.py
src/pipelines/configs/run/: example.yaml
src/pipelines/pipelines/: __init__.py  _pipeline_utils.py  _zenml_sqlalchemy_uuid_compat.py  publish_hf.py  train_and_publish.py  training.py
src/pipelines/pipelines/evaluation/: __init__.py  __main__.py  pipeline.py
src/pipelines/pipelines/publish/: __init__.py  __main__.py  pipeline.py
src/pipelines/pipelines/steps/: __init__.py  evaluate_hf_dataset_step.py  publish_hf_step.py  train_step.py
src/pipelines/pipelines/training/: __init__.py  __main__.py  pipeline.py  publish.py  train_and_publish.py
src/pipelines/pipelines/utils/: __init__.py  pipeline_utils.py  zenml_sqlalchemy_uuid_compat.py
src/pipelines/steps/: publish_hf_step.py  train_step.py
src/pipelines/tests/: test_evaluation_config.py
(+113 files in other folders)
