[project]
name = "lamp"
version = "0.1.0"
description = "LAMP workspace with multiple packages for antimicrobial peptide modelling and exploration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
respect-gitignore = true

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E203",  # Whitespace before ':' (compatible with many formatters)
]

[tool.ruff.lint.isort]
known-first-party = ["lamp"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.5.0",
]

[tool.uv.workspace]
# Include the setup package (data preparation tools) as a workspace member
members = [
  "./setup",
  "src/pep_compass_jr",
  "src/modelling",
]
