[project]
name = "lamp"
version = "0.1.0"
description = "LAMP workspace with multiple packages for antimicrobial peptide modelling and exploration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
respect-gitignore = true

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E203",  # Whitespace before ':' (compatible with many formatters)
]

[tool.ruff.lint.isort]
known-first-party = ["lamp"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
  "ruff>=0.5.0",
  "mlflow>=3.10.1",
  "ipykernel>=7.2.0",
  "pytest>=8.4.1",
]

[tool.uv]
# Dependency cooldown: only consider releases older than this window (uv ≥0.9.17).
exclude-newer = "7 days"
required-version = ">=0.9.17"

[tool.uv.workspace]
# Include the setup package (data preparation tools) as a workspace member
members = [
  "./setup",
  "src/apex",
  "src/hydramp",
  "src/pep_eval",
  "src/pep_compass_jr",
  "src/modelling",
  "src/pipelines",
]

[tool.uv.sources]
lamp-modelling = { workspace = true }
pep-eval = { workspace = true }
