[project]
name = "lamp-setup"
version = "0.1.0"
description = "Data preparation utilities for LAMP project"
readme = "prepare_data/README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "requests>=2.31.0",
    "huggingface-hub>=0.35.3",
    "typer>=0.19.2",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
lamp-data-prep = "setup.prepare_data.__main__:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["setup*"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E203",  # Whitespace before ':' (compatible with many formatters)
]

[tool.ruff.lint.isort]
known-first-party = ["setup"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
