[project]
name = "lamp-amp-opt"
version = "0.1.0"
description = "APEX-driven AMP optimization with POLi-compatible discrete search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lamp-apex",
    "lamp-pep-compass-jr",
    "pep-eval",
    "numpy>=1.26,<2",
    "poli-core>=1.3,<1.4",
    "pyyaml>=6.0.0",
    "pydantic>=2.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
hub = [
    "transformers>=4.52.0",
    "huggingface_hub>=0.32.0",
]

[project.scripts]
lamp-amp-opt = "amp_opt.run:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"amp_opt" = ["configs/**/*.yaml"]

[tool.uv.sources]
lamp-apex = { workspace = true }
lamp-pep-compass-jr = { workspace = true }
pep-eval = { workspace = true }
