[project]
name = "lamp-hydramp"
version = "0.1.0"
description = "HydrAMP model components package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
