[project]
name = "hydramp"
version = "0.1.0"
description = "HydrAMP model components package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface_hub>=0.32.0",
    "pyyaml>=6.0.2",
    "torch>=2.9.0",
    "transformers>=4.52.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
