[project]
name = "lamp-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytorch-lightning>=2.5.5",
    "torch>=2.9.0",
    "datasets>=2.0.0",
    "pydantic>=2.0.0",
    "jsonargparse[signatures]>=4.27.7",
    "einops>=0.8.1",
    "neptune>=1.10.0",
    "wandb>=0.17.0",
]
