[project]
name = "lamp-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytorch-lightning>=2.5.5",
    "torch>=2.9.0",
    "datasets>=2.0.0",
    "pydantic>=2.0.0",
    "jsonargparse[signatures]>=4.44.0",
    "neptune>=1.14.0",
    "einops>=0.8.1",
    "transformers>=4.57.3",
]

[project.scripts]
modelling = "modelling.src.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
