[project]
name = "lamp-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.0",
    "datasets>=2.0.0",
    "pydantic>=2.0.0",
    "einops>=0.8.1",
    "mlflow>=3.10.1",
    "transformers>=4.57.3",
    "accelerate>=0.26.0",
    "huggingface-hub>=0.35.3",
    "hydra-core>=1.3.2",
]

[project.scripts]
modelling = "modelling.src.training.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "configs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]
