[project]
name = "lamp-pep-compass-jr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "einops>=0.8.1",
  "numpy>=1.26.0",
  "torch>=2.9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"pep_compass_jr" = "."}
packages = ["pep_compass_jr"]
